@@ -17,6 +17,7 @@ Bugfixes
 
 - Fixed exception dates format in calendar widget of recurring events (https://launchpad.net/bugs/372889)
 - Updated copyright (https://launchpad.net/bugs/1289277)
+- Fixed term/section navigation in a different school year (https://launchpad.net/bugs/1281050)
 
 
 2.6.2 (2014-02-15)
